# Render_Test_Task

./: .gitignore  CMakeLists.txt  README.md
BinaryRepresentation/: CMakeLists.txt  binary_representation.cpp
LinkedListParser/: CMakeLists.txt  linked_list_parser.cpp  linked_list_parser.h
SmoothPerVertexNormals/: CMakeLists.txt  smooth_per_vertex_normals.cpp  smooth_per_vertex_normals.h  utils.cpp  utils.h
Tests/: CMakeLists.txt
Tests/LinkedListParser/: linked_list_parser_test.cpp
Tests/SmoothPerVertexNormals/: smooth_per_vertex_normals_test.cpp
Utils/: CMakeLists.txt  defines.h
